--- a/src/main/resources/org/lizkozz/main_scene.fxml
+++ b/src/main/resources/org/lizkozz/main_scene.fxml
@@ -4,8 +4,11 @@
 
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TabPane?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lizkozz.FXMLController">
     <children>
         <MenuBar fx:id="menuBar"/>
+        <TabPane fx:id="questionBox" />
     </children>
 </VBox>
