--- a/src/main/resources/org/lizkozz/main_scene.fxml
+++ b/src/main/resources/org/lizkozz/main_scene.fxml
@@ -6,9 +6,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TabPane?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.lizkozz.FXMLController">
-    <children>
-        <MenuBar fx:id="menuBar"/>
-        <TabPane fx:id="questionBox" />
-    </children>
+<?import javafx.scene.control.Button?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.lizkozz.FXMLController">
+    <MenuBar fx:id="menuBar"/>
+    <TabPane fx:id="questionBox"/>
+    <HBox alignment="BOTTOM_CENTER" spacing="10" VBox.vgrow="NEVER">
+        <Button fx:id="previousQuestion" text="Edellinen"/>
+        <Button fx:id="nextQuestion" text="Seuraava"/>
+        <Button fx:id="submit" text="Valmis"/>
+    </HBox>
 </VBox>
