--- a/src/main/resources/org/lizkozz/main_scene.fxml
+++ b/src/main/resources/org/lizkozz/main_scene.fxml
@@ -15,6 +15,7 @@
         <HBox alignment="CENTER_LEFT" spacing="10" HBox.hgrow="ALWAYS">
             <Button fx:id="previousQuestion" text="Edellinen"/>
             <Button fx:id="nextQuestion" text="Seuraava"/>
+            <Button fx:id="check" text="Tarkasta"/>
         </HBox>
         <HBox alignment="CENTER_RIGHT" spacing="10">
             <Button fx:id="submit" text="Valmis"/>
